--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=18.17.0"
   },
   "dependencies": {
-    "ethers": "6.13.4",
+    "ethers": "^6.15.0",
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
